Fix path to values file

--- a/argocd/dev/applications/email.yaml
+++ b/argocd/dev/applications/email.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: HEAD
     helm:
       valueFiles:
-      - HelmCharts/values/email-values.yaml
+      - ../values/email-values.yaml
 
   project: default
   syncPolicy:
