Fix value file for shipping-service

--- a/argocd/dev/applications/shipping.yaml
+++ b/argocd/dev/applications/shipping.yaml
@@ -15,7 +15,7 @@ spec:
     targetRevision: HEAD
     helm:
       valueFiles:
-      - ../values/chipping-values.yaml
+      - ../values/shipping-values.yaml
 
   project: default
   syncPolicy:
