--- a/.github/workflows/tf-cicd.yml
+++ b/.github/workflows/tf-cicd.yml
@@ -57,14 +57,11 @@ jobs:
     name: Terraform plan 
     runs-on: ubuntu-latest
     if: (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev')
-    steps:
-      - name: Checkout Code 
-        uses: actions/checkout@v4
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-      - name: Terraform Validate
-        working-directory: "terraform/${{ github.event.inputs.environment }}"
-        run: terraform validate
+    uses: "../reusable/tf-plan.yml"
+    with: 
+      ENV: ${{ github.event.inputs.environment }}
+    secrets:
+      AWS_ROLE: ${{ secrets.AWS_ROLE_DEV }}
 
       
 
