--- a/.github/workflows/tf-cicd.yml
+++ b/.github/workflows/tf-cicd.yml
@@ -57,7 +57,7 @@ jobs:
     name: Terraform plan 
     runs-on: ubuntu-latest
     if: (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev')
-    uses: "../reusable/tf-plan.yml"
+    uses: ./.github/reusable/tf-plan.yml
     with: 
       ENV: ${{ github.event.inputs.environment }}
     secrets:
