fix session name for OIDC

--- a/.github/workflows/tf-apply.yml
+++ b/.github/workflows/tf-apply.yml
@@ -39,6 +39,7 @@ jobs:
           role-to-assume: ${{ secrets.AWS_ROLE }}
           audience: personal-aws-02
           aws-region: ${{ env.AWS_DEFAULT_REGION }}
+          role-session-name: terraform-apply-session
 
       - name: Terraform Init
         working-directory: "terraform/${{ inputs.ENV }}"
