--- a/.github/workflows/tf-plan.yml
+++ b/.github/workflows/tf-plan.yml
@@ -57,6 +57,7 @@ jobs:
         with:
           name: terraform-plan-${{ inputs.ENV }}
           path: "terraform/${{ inputs.ENV }}/tfplan-${{ inputs.ENV }}.out"
+          overwrite: true
 
       
 
