--- a/manifest/aws-ingress.yml
+++ b/manifest/aws-ingress.yml
@@ -3,6 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: alb-ingress-rules
+  namespace: development
   annotations:
     alb.ingress.kubernetes.io/load-balancer-name: "alb-ingress"
     alb.ingress.kubernetes.io/ip-address-type: ipv4
@@ -21,7 +22,7 @@ metadata:
     alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=300
 
 spec:
-  ingressClassName: ingres-class
+  ingressClassName: alb 
   rules:
     - host: k8s.mikhalskyi.space
       http:
@@ -37,7 +38,7 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: adminer-service
+                name: frontend-service
                 port:
                   number: 80
   tls:
